Fixes spacing on about page
[#157117676]

--- a/src/less/about.less
+++ b/src/less/about.less
@@ -59,21 +59,15 @@
         text-align: center;
     }
 
-    .about__description {
-        width: 96vw;
-    }
-
     .about__darby .about__title {
         text-align: center;
     }
 
     .about__darby .about__description {
-        width: 96vw;
         text-align: left;
     }
 
     .about__clarissa__picture, .about__darby__picture {
-        width: 96vw;
         height: 32vw;
         margin-top: 5vw;
         background-size: contain;
